fixed headset section spacing

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
     font-style: italic;
 }
 main > section {
-    min-height: 100vh;
     overflow: auto;
 }
 
@@ -52,6 +51,7 @@ nav ul a:hover {
     align-items: flex-start;
     font-size: 4em;
     color: #a59aff;
+    min-height: 100vh;
 }
 #intro > div {
     background-color: #1d1818;
@@ -87,7 +87,7 @@ nav ul a:hover {
 
 .card {
     width: 400px;
-    margin: 1em;
+    margin: 1em 1em 3em 1em;
     background-color: rgb(0, 0, 0);
     box-shadow: 0 0 22px rgba(0, 0, 0, 0.44);
 }
@@ -106,11 +106,10 @@ nav ul a:hover {
 #headset {
     display: flex;
     justify-content: center;
-    margin: 0;
 }
 #headset > div {
     color: #a59aff;
-    padding: 3em;
+    margin: 3em;
     width: 100%;
     text-align: center;
 }
